--- a/civic_voice_frontend/package.json
+++ b/civic_voice_frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.8",
+    "@react-oauth/google": "^0.13.4",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
